apps/base/vaultwarden/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vaultwarden
  name: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      containers:
      - image: vaultwarden/server:latest
        imagePullPolicy: IfNotPresent
        name: vaultwarden
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 3012
          name: http-websocket
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: data
        resources:
          limits:
            cpu: 300m
            memory: 1Gi
          requests:
            cpu: 50m
            memory: 256Mi
      volumes:
      - name: data
        emptyDir:
          sizeLimit: 500Mi
