apps/base/vaultwarden/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: websocket
    protocol: TCP
    port: 3012
    targetPort: 3012
  type: ClusterIP
  selector:
    app: vaultwarden
